# we-study

./: .gitignore  README.md  pyproject.toml
applications/: admin.py  models.py
applications/migrations/: 0001_initial.py
boards/: admin.py  models.py  urls.py  views.py
boards/migrations/: 0001_initial.py
config/: forms.py  settings.py  urls.py  views.py
config/static/css/: style.css
config/templates/auth/: found.html  idfound.html  login.html  pwfound.html  signup.html
config/templates/base/: base.html  navbar.html
config/templates/forum/: createThread.html  createpost.html  forum.html  post.html  postedit.html  studyroomForum.html  thread.html
config/templates/main/: main.html
config/templates/mypage/: base.html  menu.html  mycalender.html  myinfo.html  mypage.html  mypassword.html
config/templates/studyroom/: base.html  create.html  lobby.html  request.html  studyroom.html  studyroomBoard.html  studyroomCalendar.html  studyroomCalendarStudy.html  studyroomConfirm.html  studyroomGoal.html  studyroomGoalSetting.html  studyroomMember.html  studyroomMemberConfirm.html  studyroomMenu.html  studyroomProgress.html  studyroomTask.html  studyroomTime.html
forum/: admin.py  forms.py  models.py  urls.py  views.py
forum/migrations/: 0001_initial.py
studyrooms/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
studyrooms/migrations/: 0001_initial.py  0002_alter_study_learning_time.py  0002_alter_studyroominfo_studyroom_and_more.py
users/: forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py
(+7 files in other folders)
