[tool.poetry]
name = "we-study"
version = "1.0.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "we-study"}]

[tool.poetry.dependencies]
python = "^3.11"
Django = "^4.1.5"
gunicorn = "^20.1.0"
pillow = "^9.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
